updated start and end date in showtime